[#6] Support for Java 8 (#24)